add remix icon CDN

--- a/index.html
+++ b/index.html
@@ -5,6 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <!--Navigation Bar-->
+      <nav>
+        <h2>Das Grune</h2>
+        <div class="part2">
+          <a href="http://">About</a>
+          <a href="http://">Project</a>
+          <a href="http://">Services</a>
+          <a href="http://">Let's Talk</a>
+        </div>
+      </nav>
+      <!--Main Section-->
+      <section>
+        <div id="herotext1">
+          <h1>DIGITIZE</h1>
+          <div id="video">
+            <div class="play"></div>
+          </div>
+        </div>
+        <div id="herotext2">
+          <h1>IDEAS</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut,
+            aspernatur error nemo quam delectus
+          </p>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
