--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="herotext1">
           <h1>DIGITIZE</h1>
           <div id="video">
-            <div class="play"></div>
+            <div class="play"><i class="ri-play-large-line"></i></div>
           </div>
         </div>
         <div id="herotext2">
@@ -38,6 +38,11 @@
           </p>
         </div>
       </section>
+      <div class="image">
+        <div class="arrow">
+          <i class="ri-arrow-right-up-line"></i>
+        </div>
+      </div>
     </main>
   </body>
 </html>
